# arm-scmi

./: Cargo.toml  README.md
src/: channel.rs  err.rs  lib.rs  protocol.rs  shmem.rs
src/protocol/: clock.rs  mod.rs
src/transport/: mod.rs  smc.rs
tests/: test.rs
